force-app/main/default/objects/Product2/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Created Date in Nexus ORG</label>
    <type>DateTime</type>
</CustomField>