force-app/main/default/objects/Product2/fields/InternalExternal__c.field-meta.xml
<CustomField>
    <fullName>InternalExternal__c</fullName>
    <label>InternalExternal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Internal</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>External</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>