force-app/main/default/objects/Product2/fields/ProfileLevel__c.field-meta.xml
<CustomField>
    <fullName>ProfileLevel__c</fullName>
    <label>ProfileLevel</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>